syntax = "proto3";

package auth;

service AuthService {
  rpc ValidateUser (ValidateUserRequest) returns (ValidateUserResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message ValidateUserRequest {
  string userId = 1;
  string token = 2;
}

message ValidateUserResponse {
  bool isValid = 1;
  string userId = 2;
  string role = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
}
